proj2/test/test_11811905_9.out
Error type 12 at Line 6: indexing by non-integer
Error type 5 at Line 7: unmatching type on both sides of assignment
